--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
 plugins {
     id 'org.springframework.boot' version '1.4.3.RELEASE'
+    id "org.sonarqube" version "6.0.1.5171"
 }
-
+sonar {
+  properties {
+    property "sonar.projectKey", "duvu_feign-oauth2-example"
+    property "sonar.organization", "duvu"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 subprojects {
     apply plugin: 'groovy'
     apply plugin: 'org.springframework.boot'
